<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_screen_main">

    <PreferenceCategory
        android:key="pref_cat_brightness"
        android:title="@string/pref_category_brightess_title" >

        <!-- auto dim -->
        <CheckBoxPreference
            android:key="pref_auto_dim"
            android:title="@string/pref_auto_dim_title"
            android:summary="@string/pref_auto_dim_summary" />

        <com.raidzero.dreamclock.preferences.SliderPreference
            android:key="pref_static_brightness"
            android:title="@string/pref_static_brightness_title" />

        <com.raidzero.dreamclock.preferences.ThresholdsPreference
            android:key="pref_saved_thresholds"
            android:title="@string/pref_adjust_brightness_thresholds_title" />

    </PreferenceCategory>

    <CheckBoxPreference
        android:key="pref_anim_slide"
        android:title="@string/pref_anim_slide_title"
        android:summary="@string/pref_anim_slide_summary" />

    <CheckBoxPreference
        android:key="pref_include_notifications"
        android:title="@string/pref_include_notifications_title"
        android:summary="@string/pref_include_notifications_summary" />

</PreferenceScreen>